{X:3} added Advance Characters stats Table  & set configs  & added Customs SQLs For Custom Stuff

--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -54,9 +54,9 @@ ConfVersion=2010100901
 RealmID = 1
 DataDir = "."
 LogsDir = ""
-LoginDatabaseInfo     = "127.0.0.1;3306;mangos;mangos;realmd"
-WorldDatabaseInfo     = "127.0.0.1;3306;mangos;mangos;mangos"
-CharacterDatabaseInfo = "127.0.0.1;3306;mangos;mangos;characters"
+LoginDatabaseInfo     = "127.0.0.1;3306;root;ascent;realmd"
+WorldDatabaseInfo     = "127.0.0.1;3306;root;ascent;mangos"
+CharacterDatabaseInfo = "127.0.0.1;3306;root;ascent;characters"
 MaxPingTime = 30
 WorldServerPort = 8085
 BindIP = "0.0.0.0"
@@ -366,7 +366,7 @@ GmLogFile = ""
 GmLogTimestamp = 0
 GmLogPerAccount = 0
 RaLogFile = ""
-LogColors = ""
+LogColors = "13 7 11 9"
 
 # Chat log parameters
 ChatLogEnable = 0
