--- a/sql/updates/Makefile.am
+++ b/sql/updates/Makefile.am
@@ -127,6 +127,15 @@ pkgdata_DATA = \
 	10764_01_mangos_spell_proc_event.sql \
 	10786_01_mangos_spell_proc_item_enchant.sql \
 	10786_02_mangos_spell_proc_event.sql \
+	10788_01_mangos_creature_addon.sql \
+	10788_02_mangos_creature_template_addon.sql \
+	10835_01_mangos_spell_proc_event.sql \
+	10862_01_characters_mail.sql \
+	10863_01_mangos_spell_proc_event.sql \
+	10864_01_mangos_spell_proc_event.sql \
+	10867_01_mangos_npc_trainer_template.sql \
+	10867_02_mangos_creature_template.sql \
+	10883_01_mangos_spell_proc_event.sql \
 	README
 
 ## Additional files to include when running 'make dist'
@@ -234,4 +243,13 @@ EXTRA_DIST = \
 	10764_01_mangos_spell_proc_event.sql \
 	10786_01_mangos_spell_proc_item_enchant.sql \
 	10786_02_mangos_spell_proc_event.sql \
+	10788_01_mangos_creature_addon.sql \
+	10788_02_mangos_creature_template_addon.sql \
+	10835_01_mangos_spell_proc_event.sql \
+	10862_01_characters_mail.sql \
+	10863_01_mangos_spell_proc_event.sql \
+	10864_01_mangos_spell_proc_event.sql \
+	10867_01_mangos_npc_trainer_template.sql \
+	10867_02_mangos_creature_template.sql \
+	10883_01_mangos_spell_proc_event.sql \
 	README
