{X:32} minor typo in mangos.config.dist

--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -129,7 +129,7 @@ BindIP = "0.0.0.0"
 #
 #    vmap.enableLOS
 #    vmap.enableHeight
-#        Enable/Disable VMmap support for line of sight and height calculation
+#        Enable/Disable vmap support for line of sight and height calculation
 #        Default: 0 (disable)
 #                 1 (enable)
 #
